--- a/presenters/dialog/style.less
+++ b/presenters/dialog/style.less
@@ -2,7 +2,7 @@
 	// font-size: .9em;
 	border-radius: var(--radius);
 	background: var(--theme-bgd);
-	color: var(--theme-color);
+	color: var(--theme-text);
 	max-width: 100%;
 	min-height: 1em;
 	display: grid;
@@ -61,7 +61,7 @@
 		
 		form-control {
 			text-align: left;
-			color: var(--theme-color, #222);
+			color: var(--theme-text, #222);
 			width: 100%;
 			margin-top: .5em;
 		}
