--- a/presenters/popover/style.less
+++ b/presenters/popover/style.less
@@ -40,7 +40,7 @@
 
 	&.tooltip {
 		pointer-events: none;
-		--bgd: var(--theme-color, #222);
+		--bgd: var(--theme-text, #222);
 		color: var(--theme-bgd, #fff);
 
 		div.__view {
