--- a/styles/index.less
+++ b/styles/index.less
@@ -1,7 +1,7 @@
 
 html {
     background: var(--theme-bgd);
-    color: var(--theme-color);
+    color: var(--theme-text);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-smoothing: antialiased;
