--- a/styles/theme.less
+++ b/styles/theme.less
@@ -7,10 +7,10 @@
 :root,
 :root[light]
 {
-    --theme-rgb: 34,34,34;
+    --theme-text-rgb: 34,34,34;
     --theme-bgd-rgb: 255,255,255;
-    --theme-color: rgba(var(--theme-rgb), 1);
-    --theme-color-accent: rgba(var(--theme-rgb),.4);
+    --theme-text: rgba(var(--theme-text-rgb), 1);
+    --theme-text-accent: rgba(var(--theme-text-rgb),.4);
     --theme-bgd: white;
     --theme-bgd-accent: #ebebeb;
     --theme-bgd-accent2: var(--light);
@@ -18,10 +18,10 @@
 
 :root[dark]
 {
-    --theme-rgb: 255,255,255;
+    --theme-text-rgb: 255,255,255;
     --theme-bgd-rgb: 0,0,0;
-    --theme-color: rgba(var(--theme-rgb), 1);
-    --theme-color-accent: rgba(var(--theme-rgb),.4);
+    --theme-text: rgba(var(--theme-text-rgb), 1);
+    --theme-text-accent: rgba(var(--theme-text-rgb),.4);
     --theme-bgd: var(--dark);
     --theme-bgd-accent: var(--dark-black);
     --theme-bgd-accent2: #242729;
@@ -30,39 +30,39 @@
 // set colors and styles for BUI elements and presenters
 :root {
     --b-btn-color: var(--theme-bgd);
-    --b-btn-bgd: var(--theme-color);
+    --b-btn-bgd: var(--theme-text);
     --b-spinner-overlay-bgd: rgba(var(--theme-bgd-rgb), .6);
-    --b-label-color: rgba(var(--theme-rgb), .3);
-    --b-sub-color: rgba(var(--theme-rgb), .4);
+    --b-label-color: rgba(var(--theme-text-rgb), .3);
+    --b-sub-color: rgba(var(--theme-text-rgb), .4);
     --b-hr-bgd: var(--theme-bgd-accent);
 
     // BUI presenters
     --b-panel-bgd: var(--theme-bgd);
     --fc-theme: var(--theme);
     --fc-bgd: var(--theme-bgd-accent);
-    --fc-placeholder-color: var(--theme-color-accent);
-    --fc-disabled-color: rgba(var(--theme-rgb), .3);
-    --fc-help-color: rgba(var(--theme-rgb), .6);
-    --b-notif-bgd: var(--theme-color);
+    --fc-placeholder-color: var(--theme-text-accent);
+    --fc-disabled-color: rgba(var(--theme-text-rgb), .3);
+    --fc-help-color: rgba(var(--theme-text-rgb), .6);
+    --b-notif-bgd: var(--theme-text);
     --b-notif-color: var(--theme-bgd-accent);
-    --b-dialog-msg-color: var(--theme-color-accent);
+    --b-dialog-msg-color: var(--theme-text-accent);
     --b-dialog-icon-bgd: var(--theme-bgd-accent);
     --b-paper-bgd: var(--theme-bgd);
-    --b-empty-state-color: rgba(var(--theme-rgb), .2);
+    --b-empty-state-color: rgba(var(--theme-text-rgb), .2);
     --list-search-bgd: var(--theme-bgd-accent);
     
     --b-menu-hover-bgd: var(--theme-bgd-accent2);
     --b-menu-checkbox-color: var(--theme-chosen);
     --b-menu-input-bgd: var(--theme-bgd-accent);
-    --b-menu-input-color: var(--theme-color);
-    --b-menu-color-accent: rgba(var(--theme-rgb), .5);
-    --b-menu-description-color: var(--theme-color-accent);
+    --b-menu-input-color: var(--theme-text);
+    --b-menu-color-accent: rgba(var(--theme-text-rgb), .5);
+    --b-menu-description-color: var(--theme-text-accent);
 
     --b-popover-bgd: var(--theme-bgd);
-    --b-popover-color: var(--theme-color);
+    --b-popover-color: var(--theme-text);
 
-    --b-tabs-inactive-color: rgba(var(--theme-rgb), .4);
-    --b-tabs-border-color: rgba(var(--theme-rgb), .1);
+    --b-tabs-inactive-color: rgba(var(--theme-text-rgb), .4);
+    --b-tabs-border-color: rgba(var(--theme-text-rgb), .1);
 }
 
 
@@ -78,7 +78,7 @@
 }
 
 b-panel {
-    color: var(--theme-color);
+    color: var(--theme-text);
 }
 
 b-panel:not([anchor="center"]) {
