--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -14,6 +14,10 @@ html {
     // -webkit-user-select: none;
 
     --view-gutter: 2em;
+
+    --font-system: -apple-system, BlinkMacSystemFont, "Segoe UI",
+               Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+               "Helvetica Neue", sans-serif;
 }
 
 html.ios.installed {
