Styles: pwa - move root panels to top of window

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -47,6 +47,11 @@ html, body {
     .popover .b-menu {
         font-size: 1.1em;
     }
+
+    b-panels[name="root"] {
+        top: 0;
+        z-index: 110;
+    }
 }
 
 // change Menu presenter styling when rendered within a Panel (or modal)
