Styles: add `theme-shadow` so we can make it easier to see in dark mode

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -14,6 +14,7 @@
     --theme-bgd: white;
     --theme-bgd-accent: #ebebeb;
     --theme-bgd-accent2: var(--light);
+    --theme-shadow: rgba(0,0,0,.2);
 }
 
 :root[dark]
@@ -25,6 +26,7 @@
     --theme-bgd: var(--dark);
     --theme-bgd-accent: var(--dark-black);
     --theme-bgd-accent2: #242729;
+    --theme-shadow: rgba(0,0,0,.4);
 }
 
 // set colors and styles for BUI elements and presenters
