--- a/styles/theme.less
+++ b/styles/theme.less
@@ -93,4 +93,14 @@ b-panel:not([anchor="center"]) {
 }
 
 :root[dark] .popover { --border: var(--dark-black); }
-:root[dark] .popover .__view { box-shadow: rgba(0, 0, 0, 0.4) 0 4px 8px; }
+:root[dark] .popover .__view {
+    // box-shadow: rgba(0, 0, 0, 0.4) 0 4px 8px;
+    box-shadow:
+        0 2.3px 2.4px rgba(0, 0, 0, 0.04),
+        0 4.3px 5.2px rgba(0, 0, 0, 0.075),
+        0 6.1px 8.7px rgba(0, 0, 0, 0.105),
+        0 7.6px 13.7px rgba(0, 0, 0, 0.13),
+        0 9.2px 23.7px rgba(0, 0, 0, 0.155),
+        0 15px 80px rgba(0, 0, 0, 0.23)
+;
+}
