Style: PWA - stop tablet font size adjust being applied to phones

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -30,10 +30,10 @@ html, body {
     overflow: hidden;
 }
 
-@media (min-width:700px) {
+@media (min-width:700px) and (min-height:700px) {
     html.mobile body {
         // little larger on tablets
-        font-size: 18px;;
+        font-size: 18px;
     }
 }
 
