--- a/styles/theme.less
+++ b/styles/theme.less
@@ -89,7 +89,7 @@ b-panel:not([anchor="center"]) {
 
 .installed b-panel,
 .electron b-panel {
-    border-top: solid 1px var(--theme-bgd-accent);
+    // border-top: solid 1px var(--theme-bgd-accent);
 }
 
 :root[dark] .popover { --border: var(--dark-black); }
