Theme: add `secondary` theme support - also theme-gradient

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -1,6 +1,9 @@
 :root {
     // set initial theme colors
     --theme: var(--blue);
+    --theme-secondary: var(--blue-A700);
+    --theme-gradient: linear-gradient(to right, var(--theme-secondary), var(--theme));
+    --theme-gradient-reverse: linear-gradient(to left, var(--theme-secondary), var(--theme));
 
     --light-text-rgb: 34,34,34;
     --light-bgd-rgb: 255,255,255;
