Menu: fix bug when using multiple in panel/modal mode

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -228,6 +228,13 @@
 	display: none;
 }
 
+b-dialog .b-menu .menu-item {
+	padding-left: .5em;
+	padding-right: .15em;
+	margin-left: 0;
+	margin-right: 0;
+}
+
 /*
 	Presenters
 */
