Theme: adjust postit paper color in darkmode

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -122,7 +122,8 @@
 
     --b-paper-shadow: rgba(0,0,0,.35) 0 1px 5px;
     --b-paper-postit-color: var(--theme-bgd);
-    --b-paper-postit-bgd: var(--amber-200);
+    --b-paper-postit-bgd: #8c8161; // var(--amber-200);
+    --b-paper-postit-color: var(--theme-text);
     --b-paper-postit-bgd-accent: var(--orange);
     --b-paper-info-bgd: var(--blue-800);
     --b-paper-info-bgd-accent: var(--blue-400);
