--- a/presenters/popover/style.less
+++ b/presenters/popover/style.less
@@ -26,7 +26,7 @@
 	
 	.__view {
 		box-sizing: border-box;
-		background: var(--bgd);
+		background: var(--bgd, #fff);
 		overflow: auto;
 		border: solid 1px var(--border);
 		box-shadow: rgba(0,0,0,.2) 0 2px 8px;
