App theme improvement

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -137,6 +137,10 @@ b-panel:not([anchor="center"]) {
     --b-panel-shadow: 0 0 0 1px var(--theme-bgd-accent);
 }
 
+:root.installed b-panel:not([anchor="center"]) {
+    --b-panel-shadow: none;
+}
+
 .installed b-panel,
 .electron b-panel {
     // border-top: solid 1px var(--theme-bgd-accent);
