--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -15,13 +15,20 @@ html {
 
     --view-gutter: 2em;
 
+    --safe-bottom: env(safe-area-inset-bottom);
+    --safe-top: env(safe-area-inset-top);
+    --safe-left: env(safe-area-inset-left);
+    --safe-right: env(safe-area-inset-right);
+
     --font-system: -apple-system, BlinkMacSystemFont, "Segoe UI",
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                "Helvetica Neue", sans-serif;
 }
 
 html.ios.installed {
-    top: env(safe-area-inset-top);
+    // top: env(safe-area-inset-top);
+    top: calc(env(safe-area-inset-top) / 1.25);
+    height: calc( 100% + (env(safe-area-inset-top) / 4));
 }
 
 html, body {
