--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -13,12 +13,20 @@ html {
     /* make things more "app" like: disable text selection */
     // -webkit-user-select: none;
 
-    --view-gutter: 2em;
+    
+    --gutter: 2em;
+    --view-gutter: var(--gutter); // DEPRECATED: use --gutter
 
     --safe-bottom: env(safe-area-inset-bottom);
     --safe-top: env(safe-area-inset-top);
     --safe-left: env(safe-area-inset-left);
     --safe-right: env(safe-area-inset-right);
+
+    --gutter-safe-bottom: calc(var(--gutter) + var(--safe-bottom));
+    --gutter-safe-top: calc(var(--gutter) + var(--safe-top));
+    --gutter-safe-left: calc(var(--gutter) + var(--safe-left));
+    --gutter-safe-right: calc(var(--gutter) + var(--safe-right));
+    --gutter-safe: var(--gutter-safe-top) var(--gutter-safe-right) var(--gutter-safe-bottom) var(--gutter-safe-left);
 
     --font-system: -apple-system, BlinkMacSystemFont, "Segoe UI",
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
@@ -48,7 +56,7 @@ html, body {
 @media screen and (max-width:699px), screen and (max-height:699px) {
 
     :root {
-        --view-gutter: 1em;
+        --gutter: var(--gutter-mobile, 1em);
     }
     
     :root.mobile .popover .b-menu {
