Styles: update PWA.less to disable gray tap highlight (not app-like to see it)

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -4,6 +4,7 @@ html {
 
     /* prevent iOS from showing callouts like when long pressing an image */
     -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
 
     /* Prevent font scaling in landscape while allowing user zoom */
     -webkit-text-size-adjust: 100%;
