PWA Style: adjust tablet detection for font size change

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -46,7 +46,11 @@ html, body {
     overflow: hidden;
 }
 
-@media (min-width:700px) and (min-height:700px) {
+/*
+    Only require one side to be large. Android will shrink the viewport
+    when the keyboard opens
+*/
+@media (min-width:700px), (min-height:700px) {
     html.mobile body {
         // little larger on tablets
         font-size: 18px;
