--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -58,7 +58,10 @@ html, body {
 }
 
 // slightly larger menu on small screens
-@media screen and (max-width:699px), screen and (max-height:699px) {
+@media
+screen and (orientation:landscape) and (max-width:999px) and (max-height:699px),
+screen and (orientation:portrait) and (max-height:999px) and (max-width:699px)
+{
 
     :root {
         --gutter: var(--gutter-mobile, 1em);
