--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -50,8 +50,8 @@ html, body {
     Only require one side to be large. Android will shrink the viewport
     when the keyboard opens
 */
-@media (min-width:700px), (min-height:700px) {
-    html.mobile body {
+@media (min-width:600px), (min-height:600px) {
+    html.mobile:not(.chromeos) body {
         // little larger on tablets
         font-size: 18px;
     }
@@ -59,8 +59,8 @@ html, body {
 
 // slightly larger menu on small screens
 @media
-screen and (orientation:landscape) and (max-width:999px) and (max-height:699px),
-screen and (orientation:portrait) and (max-height:999px) and (max-width:699px)
+screen and (orientation:landscape) and (max-width:999px) and (max-height:599px),
+screen and (orientation:portrait) and (max-height:999px) and (max-width:599px)
 {
 
     :root {
