--- a/styles/theme.less
+++ b/styles/theme.less
@@ -2,8 +2,8 @@
     // set initial theme colors
     --theme: var(--blue);
     --theme-secondary: var(--blue-A700);
-    --theme-gradient: linear-gradient(to right, var(--theme-secondary), var(--theme));
-    --theme-gradient-reverse: linear-gradient(to left, var(--theme-secondary), var(--theme));
+    --theme-gradient: linear-gradient(var(--theme-gradient-direction, to right), var(--theme-secondary), var(--theme));
+    --theme-gradient-reverse: linear-gradient(var(--theme-gradient-direction, to left), var(--theme-secondary), var(--theme));
 
     --light-text-rgb: 34,34,34;
     --light-bgd-rgb: 255,255,255;
