--- a/presenters/popover/style.less
+++ b/presenters/popover/style.less
@@ -9,7 +9,19 @@
 	// transition: margin 200ms, opacity 200ms;
 	// opacity: 0;
 
+	&.no-arrow {
+		--arrow-w: 0;
+	}
+
 	&.inverse {
+		--theme-bgd: var(--theme-inverse-bgd);
+		--theme-bgd-accent: var(--theme-inverse-bgd-accent);
+		--theme-bgd-accent2: var(--theme-inverse-bgd-accent2);
+		--theme-bgd-rgb: var(--theme-inverse-bgd-rgb);
+		--theme-text: var(--theme-inverse-text);
+		--theme-text-accent: var(--theme-inverse-text-accent);
+		--theme-text-rgb: var(--theme-inverse-text-rgb);
+		
 		--bgd: var(--theme-inverse-bgd, #222);
 		color: var(--theme-inverse-text, #222);
 	}
