Menu: add position:relative to menu-items

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -75,6 +75,7 @@
 		transition: 120ms;
 		display: flex;
 		align-items: flex-start;
+		position: relative;
 
 		> b-icon:first-child,
 		> check-box + b-icon,
@@ -96,6 +97,7 @@
 
 		> .mi-content {
 			flex-grow: 1;
+			min-width: 1em;
 		}
 
 		.mi-label {
