tooltip: uses 'inverse' class now

--- a/presenters/popover/style.less
+++ b/presenters/popover/style.less
@@ -57,8 +57,8 @@
 
 	&.tooltip {
 		pointer-events: none;
-		--bgd: var(--theme-text, #222);
-		color: var(--theme-bgd, #fff);
+		// --bgd: var(--theme-text, #222);
+		// color: var(--theme-bgd, #fff);
 
 		div.__view {
 			font-size: .8em;
