pwa styles: change gutter to use `rem`

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -15,7 +15,7 @@ html {
     // -webkit-user-select: none;
 
     
-    --gutter: 2em;
+    --gutter: 2rem;
     --view-gutter: var(--gutter); // DEPRECATED: use --gutter
 
     --safe-bottom: env(safe-area-inset-bottom);
@@ -65,7 +65,7 @@ screen and (orientation:portrait) and (max-height:999px) and (max-width:599px)
 {
 
     :root {
-        --gutter: var(--gutter-mobile, 1em);
+        --gutter: var(--gutter-mobile, 1rem);
     }
     
     :root.mobile .popover .b-menu {
