Styles: add `--gutter-negative`

--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -16,6 +16,7 @@ html {
 
     
     --gutter: 2rem;
+    --gutter-negative: calc(-1 * var(--gutter));
     --view-gutter: var(--gutter); // DEPRECATED: use --gutter
 
     --safe-bottom: env(safe-area-inset-bottom);
