Theme: add --theme-text-accent2

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -9,6 +9,7 @@
     --light-bgd-rgb: 255,255,255;
     --light-text: rgba(var(--light-text-rgb), 1);
     --light-text-accent: rgba(var(--light-text-rgb),.4);
+    --light-text-accent2: rgba(var(--light-text-rgb),.8);
     --light-bgd: white;
     --light-bgd-accent: #ebebeb;
     --light-bgd-accent2: var(--light);
@@ -18,6 +19,7 @@
     --dark-bgd-rgb: 0,0,0;
     --dark-text: rgba(var(--dark-text-rgb), 1);
     --dark-text-accent: rgba(var(--dark-text-rgb),.4);
+    --dark-text-accent2: rgba(var(--dark-text-rgb),.8);
     --dark-bgd: var(--dark);
     --dark-bgd-accent: var(--dark-black);
     --dark-bgd-accent2: #242729;
@@ -33,6 +35,7 @@
     --theme-bgd-rgb: var(--light-bgd-rgb);
     --theme-text: var(--light-text);
     --theme-text-accent: var(--light-text-accent);
+    --theme-text-accent2: var(--light-text-accent2);
     --theme-bgd: var(--light-bgd);
     --theme-bgd-accent: var(--light-bgd-accent);
     --theme-bgd-accent2: var(--light-bgd-accent2);
@@ -42,6 +45,7 @@
     --theme-inverse-bgd-rgb: var(--dark-bgd-rgb);
     --theme-inverse-text: var(--dark-text);
     --theme-inverse-text-accent: var(--dark-text-accent);
+    --theme-inverse-text-accent2: var(--dark-text-accent2);
     --theme-inverse-bgd: var(--dark-bgd);
     --theme-inverse-bgd-accent: var(--dark-bgd-accent);
     --theme-inverse-bgd-accent2: var(--dark-bgd-accent2);
@@ -54,6 +58,7 @@
     --theme-bgd-rgb: var(--dark-bgd-rgb);
     --theme-text: var(--dark-text);
     --theme-text-accent: var(--dark-text-accent);
+    --theme-text-accent2: var(--dark-text-accent2);
     --theme-bgd: var(--dark-bgd);
     --theme-bgd-accent: var(--dark-bgd-accent);
     --theme-bgd-accent2: var(--dark-bgd-accent2);
@@ -63,6 +68,7 @@
     --theme-inverse-bgd-rgb: var(--light-bgd-rgb);
     --theme-inverse-text: var(--light-text);
     --theme-inverse-text-accent: var(--light-text-accent);
+    --theme-inverse-text-accent2: var(--light-text-accent2);
     --theme-inverse-bgd: var(--light-bgd);
     --theme-inverse-bgd-accent: var(--light-bgd-accent);
     --theme-inverse-bgd-accent2: var(--light-bgd-accent2);
