--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -94,6 +94,16 @@ b-panel {
     --b-panel-radius: 1rem;
 }
 
+@media (min-width: 600px){
+:root:not(.installed) b-panel[height="100%"][anchor="right"]::part(main),
+:root:not(.installed) b-panel[height="100%"][anchor="left"]::part(main) {
+    height: calc(100% - 1em);
+    right: .5em;
+    top: .5em;
+    border-radius: var(--radius);
+}
+}
+
 :root.installed b-panel[height="100%"],
 :root b-panel[height="100%"][width="100%"] {
     --b-panel-radius: 0 !important;
