Menu: given menu can be an object/model if it has a `.toMenu` or `.toOptions` method - also moved the "selected" checkbox to the right - added exported utility called `.toMenu` for other code to use

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -165,7 +165,8 @@
 		
 		> check-box {
 			--color: var(--checkboxColor) !important;
-			margin: -.25em .15em -.25em -.5em;
+			margin: -.25em -.5em -.25em .15em;
+			order: 2;
 		}
 
 		> select-field {
