Menu: make description a little darker - not very readable as is

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -111,7 +111,7 @@
 		.mi-description {
 			font-size: .8em;
 			line-height: 1.2em;
-			color: var(--b-menu-description-color, var(--theme-text-accent));
+			color: var(--b-menu-description-color, rgba(var(--theme-text-rgb), .6));
 		}
 		
 		[selected] {
