Menu: label and description removes margin from first and last paragraph tags

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -108,6 +108,12 @@
 			line-height: 1.2em;
 		}
 
+		.mi-label p:first-child { margin-top: 0; }
+		.mi-label p:last-child { margin-bottom: 0; }
+
+		.mi-description p:first-child { margin-top: 0; }
+		.mi-description p:last-child { margin-bottom: 0; }
+
 		.mi-description:empty {
 			display: none;
 		}
