--- a/styles/theme.less
+++ b/styles/theme.less
@@ -126,6 +126,8 @@
     --b-paper-postit-bgd-accent: var(--orange);
     --b-paper-info-bgd: var(--blue-800);
     --b-paper-info-bgd-accent: var(--blue-400);
+
+    --b-tabs-border-color: rgba(var(--theme-bgd-rgb), .4);
 }
 
 :root[dark] b-panel[type="modal"] {
