Update Demo: fix bugs, improve docs

--- a/demo/style.less
+++ b/demo/style.less
@@ -1,14 +1,17 @@
 //@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
 @import '~bui/styles/index.less';
+@import '~bui/styles/font-inter.less';
 @import '~bui/styles/colors-brand.less';
 @import '~bui/styles/colors-blackstone-products.less';
 
+:root {
+    // --theme: #3D5AFE;
+    --theme-secondary: #fe6847;
+}
 
 html, body {
     margin: 0;
-    font-family: Roboto, HelveticaNeue, Helvetica, Calbri, sans-serif;
-    // transition: 200ms opacity;
     font-size: 17px;
 }
 
