PWA Theme: add high contrast background var: --theme-bgd-hc - normal bgd on light, closer to black in dark mode

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -13,6 +13,7 @@
     --light-bgd: white;
     --light-bgd-accent: #ebebeb;
     --light-bgd-accent2: var(--light);
+    --light-bgd-hc: white; // high contrast
     --light-shadow: rgba(0,0,0,.2);
 
     --dark-text-rgb: 255,255,255;
@@ -23,6 +24,7 @@
     --dark-bgd: var(--dark);
     --dark-bgd-accent: var(--dark-black);
     --dark-bgd-accent2: #242729;
+    --dark-bgd-hc: #141618; // high contrast
     --dark-shadow: rgba(0,0,0,.4);
 
 }
@@ -39,6 +41,7 @@
     --theme-bgd: var(--light-bgd);
     --theme-bgd-accent: var(--light-bgd-accent);
     --theme-bgd-accent2: var(--light-bgd-accent2);
+    --theme-bgd-hc: var(--light-bgd-hc);
     --theme-shadow: var(--light-shadow);
 
     --theme-inverse-text-rgb: var(--dark-text-rgb);
@@ -49,6 +52,7 @@
     --theme-inverse-bgd: var(--dark-bgd);
     --theme-inverse-bgd-accent: var(--dark-bgd-accent);
     --theme-inverse-bgd-accent2: var(--dark-bgd-accent2);
+    --theme-inverse-bgd-hc: var(--dark-bgd-hc);
     --theme-inverse-shadow: var(--dark-shadow);
 }
 
@@ -62,6 +66,7 @@
     --theme-bgd: var(--dark-bgd);
     --theme-bgd-accent: var(--dark-bgd-accent);
     --theme-bgd-accent2: var(--dark-bgd-accent2);
+    --theme-bgd-hc: var(--dark-bgd-hc);
     --theme-shadow: var(--dark-shadow);
 
     --theme-inverse-text-rgb: var(--light-text-rgb);
@@ -72,6 +77,7 @@
     --theme-inverse-bgd: var(--light-bgd);
     --theme-inverse-bgd-accent: var(--light-bgd-accent);
     --theme-inverse-bgd-accent2: var(--light-bgd-accent2);
+    --theme-inverse-bgd-hc: var(--light-bgd-hc);
     --theme-inverse-shadow: var(--light-shadow);
 }
 
