Demo/docs update

--- a/demo/style.less
+++ b/demo/style.less
@@ -6,9 +6,15 @@
 @import '~bui/styles/colors-blackstone-products.less';
 
 :root {
-    // --theme: #3D5AFE;
-    --theme-secondary: #fe6847;
+    // --theme: #1976D2;
+    --theme-secondary: #3D5AFE;
+    --b-app-tab-bar-active-color: var(--theme-gradient);
 }
+
+:root[light] {
+    --theme: #1976D2;
+}
+
 
 html, body {
     margin: 0;
