--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -241,7 +241,7 @@
 		// font-size: .9em;
 		// line-height: 1.2em;
 		// color: var(--b-menu-color-accent, rgba(var(--theme-text-rgb), .5));
-		// background: var(--hoverBgd, #f5f5f5);
+		background: var(--theme-bgd-accent2, #eee);
 		// font-style: italic;
 	}
 } // menu
