--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -34,7 +34,9 @@
 		flex-shrink: 0;
 		display: flex;
 		position: relative;
-		padding: .5em;
+		// padding: .5em;
+		font-size: var(--b-menu-input-font-size, 1.1rem);
+		border-bottom: solid 1px var(--theme-bgd-accent);
 
 		&[hidden] {
 			padding: 0;
@@ -46,14 +48,16 @@
 			min-width: 2em;
 			box-shadow: none;
 			border: none;
-			background: var(--b-menu-input-bgd, var(--theme-bgd-accent, #eee)) !important;
+			// background: var(--b-menu-input-bgd, var(--theme-bgd-accent, #eee)) !important;
 			color: var(--b-menu-input-color, var(--theme-text));
+			font-size: 1em;
 			// border-radius: var(--b-menu-input-radius, 30px);
-			font-size: var(--b-menu-input-font-size, 1rem);
-			padding-top: var(--b-menu-input-padding, .35em);
-			padding-bottom: var(--b-menu-input-padding, .35em);
-			padding-left: 1.8em;
-			padding-right: .5em;
+			// font-size: var(--b-menu-input-font-size, 1.1rem);
+			// padding-top: var(--b-menu-input-padding, .35em);
+			// padding-bottom: var(--b-menu-input-padding, .35em);
+			// padding-left: 1.8em;
+			// padding-right: .5em;
+			padding: .75em .5em .75em 2.3em;
 			outline: none;
 		}
 		
@@ -69,7 +73,7 @@
 			position: absolute;
 			top: 50%;
 			transform: translateY(-50%);
-    		left: calc(~"1.1 * var(--b-menu-input-font-size, 1rem)");
+    		left: calc(~"1.1 * var(--b-menu-input-font-size, .75rem)");
 		}
 
 		b-spinner {
@@ -77,7 +81,7 @@
 			right: .9em;
 			top: 1em;
 			padding-right: .1em;
-			background: rgba(238, 238, 238, .9);
+			// background: rgba(238, 238, 238, .9);
 		}
 	}
 	
