Various adjustments for mobile

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -256,11 +256,15 @@
 	display: none;
 }
 
+b-dialog .b-menu {
+	margin: 0 calc(-1 * var(--pad));
+}
+
 b-dialog .b-menu .menu-item {
-	padding-left: .5em;
-	padding-right: .15em;
-	margin-left: 0;
-	margin-right: 0;
+	// padding-left: .5em;
+	// padding-right: .15em;
+	// margin-left: 0;
+	// margin-right: 0;
 }
 
 /*
