--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -33,6 +33,14 @@ html {
     --font-system: -apple-system, BlinkMacSystemFont, "Segoe UI",
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                "Helvetica Neue", sans-serif;
+
+    /* https://spencermortensen.com/articles/typographic-scale/ */
+    --font-size-xs: .65em;
+    --font-size-sm: .8409em;
+    --font-size-md: 1.1892em;
+    --font-size-lg: 1.4142em;
+    --font-size-xl: 1.6818em;
+    --font-size-xxl: 2em;
 }
 
 html.ios.installed {
