--- a/styles/pwa.less
+++ b/styles/pwa.less
@@ -110,7 +110,9 @@ b-panel {
 
 @media (min-width: 600px){
 :root:not(.installed) b-panel[height="100%"][anchor="right"]::part(main),
-:root:not(.installed) b-panel[height="100%"][anchor="left"]::part(main) {
+:root:not(.installed) b-panel[height="100%"][anchor="left"]::part(main),
+:root.insetpanels b-panel[height="100%"][anchor="right"]::part(main),
+:root.insetpanels b-panel[height="100%"][anchor="left"]::part(main) {
     height: calc(100% - 1em);
     right: .5em;
     top: .5em;
@@ -118,7 +120,7 @@ b-panel {
 }
 }
 
-:root.installed b-panel[height="100%"],
+:root.installed:not(.insetpanels) b-panel[height="100%"],
 :root b-panel[height="100%"][width="100%"] {
     --b-panel-radius: 0 !important;
 }
