Theme: remove some styles no longer needed

--- a/styles/theme.less
+++ b/styles/theme.less
@@ -118,11 +118,9 @@
 
 // set colors and styles for BUI elements and presenters
 :root {
-    --b-btn-color: var(--theme-bgd);
-    --b-btn-bgd: var(--theme-text);
     --b-spinner-overlay-bgd: rgba(var(--theme-bgd-rgb), .6);
     --b-label-color: rgba(var(--theme-text-rgb), .3);
-    --b-sub-color: rgba(var(--theme-text-rgb), .4);
+    --b-sub-color: rgba(var(--theme-text-rgb), .4); // DEPRECATED
 
     // BUI presenters
     --b-panel-bgd: var(--theme-bgd);
@@ -135,7 +133,6 @@
     --b-notif-color: var(--theme-bgd-accent);
     --b-dialog-msg-color: var(--theme-text-accent);
     --b-dialog-icon-bgd: var(--theme-bgd-accent);
-    --b-paper-bgd: var(--theme-bgd);
     --b-empty-state-color: rgba(var(--theme-text-rgb), .3);
     --list-search-bgd: var(--theme-bgd-accent);
     
