Menu: adjust placement of check-box

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -192,6 +192,7 @@
 		> check-box {
 			--color: var(--checkboxColor) !important;
 			margin: -.25em 0em -.25em .15em;
+			align-self: center;
 			order: 2;
 		}
 
