Menu: adjust selections style

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -203,8 +203,11 @@
 			color: var(--checkboxColor);
 			// box-shadow: 0 0 0 1px var(--theme) inset;
 			border-radius: 3px;
-			padding: 0 .1em;
+			// padding: 0 .1em;
 			text-align: center;
+			font-size: .8em;
+			padding: 0.2rem 0.25rem;
+			font-weight: bold;
 		}
 
 		> select-field[value=""] {
