Menu: text, title, heading options can have `bgd` turned on or off

--- a/presenters/menu/style.less
+++ b/presenters/menu/style.less
@@ -263,8 +263,14 @@
 		// font-size: .9em;
 		// line-height: 1.2em;
 		// color: var(--b-menu-color-accent, rgba(var(--theme-text-rgb), .5));
-		background: var(--theme-bgd-accent2, #eee);
 		// font-style: italic;
+		user-select: text;
+	}
+
+	.menu-text[bgd],
+	.menu-headingp[bgd],
+	.menu-title[bgd] {
+		background: var(--theme-bgd-accent2, #eee);
 	}
 } // menu
 
